--- a/package.json
+++ b/package.json
@@ -1,28 +1,47 @@
 {
-  "name": "test27",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
-    "vite": "^6.0.5"
-  }
+    "name": "small-business-roi-marketing-platform",
+    "version": "1.0.0",
+    "private": true,
+    "description": "A platform for small business marketing focused on ROI for professions such as plumbers, lawyers, and doctors.",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "lint": "eslint . ",
+        "format": "prettier --write .",
+        "autocode": "bunx autocode-ai"
+    },
+    "dependencies": {
+        "prettier": "^3.4.2",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.17.0",
+        "@types/react": "^18.3.18",
+        "@types/react-dom": "^18.3.5",
+        "@vitejs/plugin-react": "^4.3.4",
+        "eslint": "^9.17.0",
+        "eslint-plugin-react": "^7.37.2",
+        "eslint-plugin-react-hooks": "^5.0.0",
+        "eslint-plugin-react-refresh": "^0.4.16",
+        "globals": "^15.14.0",
+        "vite": "^6.0.5"
+    },
+    "keywords": [
+        "marketing",
+        "ROI",
+        "small business",
+        "React",
+        "Vite"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/username/small-business-roi-marketing-platform.git"
+    },
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/username/small-business-roi-marketing-platform/issues"
+    },
+    "homepage": "https://github.com/username/small-business-roi-marketing-platform#readme"
 }
