--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "lint": "eslint . ",
+        "lint": "eslint .",
         "format": "prettier --write .",
         "autocode": "bunx autocode-ai"
     },
     "dependencies": {
         "prettier": "^3.4.2",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "@chakra-ui/react": "^2.7.4",
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
+        "framer-motion": "^10.12.16"
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
